--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "format": "prettier --plugin-search-dir . --write ."
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^2.0.0",
+    "@sveltejs/adapter-static": "^2.0.3",
     "@sveltejs/kit": "^1.20.4",
     "@types/lodash.groupby": "^4.6.9",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -28,8 +28,7 @@
     "svelte-check": "^3.4.3",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
-    "vite": "^4.4.2",
-    "written": "^0.1.8"
+    "vite": "^4.4.2"
   },
   "type": "module"
 }
