--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --plugin-search-dir . --write ."
   },
   "devDependencies": {
+    "@iconify-json/svg-spinners": "^1.1.2",
     "@sveltejs/adapter-static": "^2.0.3",
     "@sveltejs/kit": "^1.20.4",
     "@types/lodash.groupby": "^4.6.9",
