--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "typescript": "^5.0.0",
     "vite": "^4.4.2"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "martha": "^5.1.0"
+  }
 }
