--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Copy to S3
         working-directory: ./
         run: |
-          aws s3 sync src s3://stories2.theplotline.org/protein-explorer/ --delete
+          aws s3 sync build s3://stories2.theplotline.org/protein-explorer/ --delete
       - name: Clear Cloudfront cache
         run: |
           aws cloudfront create-invalidation --distribution-id $cloudfront_distribution --paths '/*'
