--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,9 +15,11 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: "20"
+
       - name: build
-        working-directory: ./
+        env:
+          BASE_PATH: "/protein-explorer"
         run: |
           npm install && npm run build
       - name: Configure AWS
