Relabel as Farm the Gap

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "protein-explorer",
-  "version": "0.0.1",
+  "name": "farm-the-gap",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "vite dev --host",
