--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,10 +17,9 @@ jobs:
           node-version: "20"
 
       - name: build
+        run: npm install && npm run build
         env:
           BASE_PATH: "/farm-the-gap"
-        run: |
-          npm install && npm run build
       - name: Configure AWS
         uses: aws-actions/configure-aws-credentials@v4
         with:
